[gd_scene load_steps=4 format=2]

[ext_resource path="res://assests/mouse_over.png" type="Texture" id=1]
[ext_resource path="res://scripts/selectableArea.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 65.0

[node name="POS" type="Area2D"]
position = Vector2( 481, 238 )
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="mouse_over" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="x_o" type="Sprite" parent="."]

[connection signal="input_event" from="." to="." method="_on_POS_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_POS_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_POS_mouse_exited"]
